--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,27 @@
 {
-    "name": "handlebars.php",
+    "authors" : [
+        {
+            "email" : "jbboehr@gmail.com",
+            "name" : "John Boehr"
+        }
+    ],
+    "autoload" : {
+        "psr-4" : {
+            "Handlebars\\": "src/",
+            "Handlebars\\Tests\\" : "tests/"
+        }
+    },
+    "description" : "",
+    "homepage": "http://github.com/jbboehr/handlebars.php",
+    "name" : "jbboehr/handlebars",
+    "keywords" : [
+    ],
+    "license": "LGPLv3",
+    "require" : {
+        "php" : ">=5.3.0"
+    },
     "require-dev": {
         "phpunit/phpunit": "~4.5.0"
     }
+    "type" : "library"
 }
