--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
     ],
     "license": "LGPLv3",
     "require" : {
-        "php" : ">=5.3.0"
+        "php" : ">=5.3.0",
+        "ext-handlebars": ">=0.2.0"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.5.0"
