--- a/.travis.yml
+++ b/.travis.yml
@@ -8,10 +8,17 @@ php:
   - hhvm
 
 before_install:
+  - sudo rm -f /etc/apt/sources.list.d/*rabbit*
+  - sudo apt-get update -qq
+  - sudo apt-get install software-properties-common || sudo apt-get install python-software-properties || true
+  - sudo apt-add-repository -y ppa:jbboehr/handlebars
+  - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
+  - sudo apt-add-repository -y ppa:jbboehr/ppa
+  - sudo apt-add-repository -y ppa:mandel/movie-tracker
+  - sudo apt-get update -qq
   - ./.travis.sh
-
-before_script:
   - composer install --no-dev --verbose
+  - php generate-tests.php
 
 script:
   - phpunit
