--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "ext-handlebars": ">=0.2.0"
     },
     "require-dev": {
+        "pear/console_table": "~1.2.1",
         "phpunit/phpunit": "~4.5.0"
     },
     "type" : "library"
