Update TravisCI config
Only run CI on master, PRs against master will run [ci skip]

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,10 @@ php:
   - 5.6
   - hhvm
 
+branches:
+  only:
+    - master
+
 before_install:
   - sudo rm -f /etc/apt/sources.list.d/*rabbit*
   - sudo apt-get update -qq
