--- a/.travis.yml
+++ b/.travis.yml
@@ -11,19 +11,20 @@ branches:
   only:
     - master
 
+sudo: required
+
 before_install:
-  - sudo rm -f /etc/apt/sources.list.d/*rabbit*
-  - sudo apt-get update -qq
-  - sudo apt-get install software-properties-common || sudo apt-get install python-software-properties || true
-  - sudo apt-add-repository -y ppa:jbboehr/handlebars
-  - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
-  - sudo apt-add-repository -y ppa:jbboehr/ppa
-  - sudo apt-add-repository -y ppa:mandel/movie-tracker
-  - sudo apt-get update -qq
-  - ./.travis.sh
-  - composer install --verbose
-  - php generate-tests.php
+  - ./.travis.sh before_install
+
+install:
+  - ./.travis.sh install
+
+before_script:
+  - ./.travis.sh before_script
 
 script:
-  - ./vendor/bin/phpunit
+  - ./vendor/bin/phpunit --coverage-text --coverage-clover=coverage.clover
   - ./bench.php
+
+after_success:
+  - ./.travis.sh after_success
