--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,12 @@ php:
   - 5.4
   - 5.5
   - 5.6
+  - 7.0
   - hhvm
+
+matrix:
+  allow_failures:
+    - php: 7.0
 
 branches:
   only:
@@ -14,13 +19,13 @@ branches:
 sudo: required
 
 before_install:
-  - ./.travis.sh before_install
+  - travis_retry ./.travis.sh before_install
 
 install:
-  - ./.travis.sh install
+  - travis_retry ./.travis.sh install
 
 before_script:
-  - ./.travis.sh before_script
+  - travis_retry ./.travis.sh before_script
 
 script:
   - ./vendor/bin/phpunit --coverage-text --coverage-clover=coverage.clover
