--- a/composer.json
+++ b/composer.json
@@ -17,9 +17,11 @@
     "keywords" : [
     ],
     "license": "LGPLv3",
-    "require" : {
-        "php" : ">=5.3.0",
+    "suggest" : {
         "ext-handlebars": ">=0.2.0"
+    },
+    "require" : {
+        "php" : ">=5.3.0"
     },
     "require-dev": {
         "pear/console_table": "~1.2.1",
