--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
         "php" : ">=5.3.0"
     },
     "require-dev": {
+        "fabpot/php-cs-fixer": "~1.8",
         "pear/console_table": "~1.2.1",
         "phpunit/phpunit": "~4.5.0"
     },
