--- a/composer.json
+++ b/composer.json
@@ -25,10 +25,11 @@
         "php" : ">=5.3.0"
     },
     "require-dev": {
-        "fabpot/php-cs-fixer": "~1.8",
+        "jbboehr/coding-standard": "1.0.*@dev",
         "pear/console_table": "~1.2.1",
         "phpunit/phpunit": "~4.5",
-        "scrutinizer/ocular": "~1.1"
+        "scrutinizer/ocular": "~1.1",
+        "squizlabs/php_codesniffer": "~2.3.2"
     },
     "type" : "library"
 }
