--- a/.gitattributes
+++ b/.gitattributes
@@ -4,9 +4,14 @@
 # Ignore all test and documentation with "export-ignore".
 /.gitattributes     export-ignore
 /.gitignore         export-ignore
+/.gitmodules        export-ignore
 /.travis.sh         export-ignore
 /.travis.yml        export-ignore
 /apigen.neon        export-ignore
+/bench.php          export-ignore
+/composer.lock      export-ignore
+/generate-tests.php export-ignore
+/Makefile           export-ignore
 /phpunit.xml.dist   export-ignore
 /spec               export-ignore
 /.scrutinizer.yml   export-ignore
