--- a/composer.json
+++ b/composer.json
@@ -23,11 +23,9 @@
         "handlebars"
     ],
     "license": "LGPLv3",
-    "suggest" : {
-        "ext-handlebars": ">=0.3.0"
-    },
     "require" : {
         "php" : ">=5.3.0",
+        "ext-handlebars": "0.5.*",
         "ext-spl" : "*"
     },
     "require-dev": {
