--- a/.travis.yml
+++ b/.travis.yml
@@ -6,34 +6,56 @@ php:
   - 5.5
   - 5.6
   - 7.0
-  - hhvm
+
+env: LIBHANDLEBARS_VERSION=0.3.1 PHP_HANDLEBARS_VERSION=0.5.1
 
 matrix:
   fast_finish: true
   allow_failures:
-    - php: hhvm
     - php: 7.0
 
 branches:
   only:
     - master
+    - travis-fix
 
-sudo: required
+sudo: false
 
-env: NO_INTERACTION=1
+addons:
+  apt:
+    sources:
+      - ubuntu-toolchain-r-test
+    packages:
+      - bison
+      - flex
+      - gcc-4.8
+      - g++-4.8
+      - lcov
+      - libjemalloc-dev
+      - libjson0-dev
+      - libpcre3-dev
+      - libtalloc-dev
+      - pkg-config
 
-before_install:
-  - travis_retry ./.travis.sh before_install
+cache:
+  directories:
+    - $HOME/build
 
 install:
-  - travis_retry ./.travis.sh install
+  - ./.travis.sh install_check
+  - ./.travis.sh install_bison
+  - ./.travis.sh install_handlebars
+  - ./.travis.sh install_php_handlebars
 
 before_script:
-  - travis_retry ./.travis.sh before_script
+  - travis_retry composer self-update
+  - travis_retry composer install
+  - php generate-tests.php
 
 script:
   - ./vendor/bin/phpunit --coverage-text --coverage-clover=coverage.clover
   - ./bench.php
 
 after_success:
-  - travis_retry ./.travis.sh after_success
+  - ./.travis.sh after_success
+
