--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,7 @@
     },
     "require-dev": {
         "jbboehr/coding-standard": "1.0.*@dev",
+        "lox/xhprof": "dev-master",
         "pear/console_table": "~1.2.1",
         "phpunit/phpunit": "~4.5",
         "scrutinizer/ocular": "~1.1",
