--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,18 @@ php:
   - 5.6
   - 7.0
 
-env: LIBHANDLEBARS_VERSION=0.4.1 PHP_HANDLEBARS_VERSION=0.6.0
+env:
+  global:
+    - LIBHANDLEBARS_VERSION=0.4.1
+    - PHP_HANDLEBARS_VERSION=0.6.0
+
+matrix:
+  fast_finish: true
+  allow_failures:
+    - env: COVERAGE=true
+  include:
+    - php: 5.6
+      env: COVERAGE=true
 
 branches:
   only:
@@ -44,7 +55,7 @@ before_script:
   - php generate-tests.php
 
 script:
-  - ./vendor/bin/phpunit --coverage-text --coverage-clover=coverage.clover
+  - ./.travis.sh phpunit
 # broken
 #  - ./bench/main.php
 
