--- a/composer.json
+++ b/composer.json
@@ -35,6 +35,7 @@
         "lox/xhprof": "dev-master",
         "pear/console_table": "~1.2.1",
         "phpunit/phpunit": "~4.5",
+        "satooshi/php-coveralls": "~1.0.0",
         "scrutinizer/ocular": "~1.1",
         "squizlabs/php_codesniffer": "~2.3.2"
     },
