--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,21 @@
 language: php
 
 php:
-  - 5.3
+# not supported on trusty
+#  - 5.3
   - 5.4
   - 5.5
   - 5.6
   - 7.0
 
+sudo: required
+
+dist: trusty
+
 env:
   global:
-    - LIBHANDLEBARS_VERSION=0.4.4
-    - PHP_HANDLEBARS_VERSION=0.6.1
+    - LIBHANDLEBARS_VERSION=vm
+    - PHP_HANDLEBARS_VERSION=vm
 
 matrix:
   fast_finish: true
@@ -25,8 +30,6 @@ branches:
     - master
     - travis
 
-sudo: false
-
 addons:
   apt:
     packages:
@@ -39,13 +42,9 @@ addons:
       - libtalloc-dev
       - pkg-config
 
-cache:
-  directories:
-    - $HOME/build
+cache: false
 
 install:
-  - ./.travis.sh install_check
-  - ./.travis.sh install_bison
   - ./.travis.sh install_handlebars
   - ./.travis.sh install_php_handlebars
 
