--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,11 @@ env:
   global:
     - LIBHANDLEBARS_VERSION=vm
     - PHP_HANDLEBARS_VERSION=vm
+    - PREFIX="$HOME/build"
+    - PATH="$PREFIX/bin:$PATH"
+    - CFLAGS="-L$PREFIX/lib"
+    - CPPFLAGS="-I$PREFIX/include"
+    - PKG_CONFIG_PATH="$PREFIX/lib/pkgconfig"
 
 matrix:
   fast_finish: true
@@ -32,14 +37,21 @@ branches:
 
 addons:
   apt:
+    sources:
+      - ubuntu-toolchain-r-test
+      - "ppa:jbboehr/check"
     packages:
+      - automake
       - bison
+      - check
       - flex
+      - gcc-4.9
       - lcov
       - libjemalloc-dev
-      - libjson0-dev
+      - libjson-c-dev
       - libpcre3-dev
       - libtalloc-dev
+      - libyaml-dev
       - pkg-config
 
 cache: false
@@ -51,7 +63,6 @@ install:
 before_script:
   - travis_retry composer self-update
   - travis_retry composer install
-  - php generate-tests.php
 
 script:
   - ./.travis.sh phpunit
