Run tests with cache disabled, causes some tests to fail

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -19,6 +19,10 @@
         </testsuite>
     </testsuites>
 
+    <php>
+        <ini name="handlebars.cache.enabled" value="0"/>
+    </php>
+
     <filter>
         <whitelist>
             <directory processUncoveredFilesFromWhitelist="true">src</directory>
