--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
     "require" : {
         "php" : ">=5.3.0",
         "ext-handlebars": "0.6.*",
-        "ext-spl" : "*"
+        "ext-spl" : "*",
+        "psr/log": "~1.0.0"
     },
     "require-dev": {
         "jbboehr/coding-standard": "1.0.*@dev",
@@ -39,6 +40,9 @@
         "satooshi/php-coveralls": "~1.0.0",
         "scrutinizer/ocular": "~1.1",
         "squizlabs/php_codesniffer": "~2.3.2"
+    },
+    "suggest": {
+        "ext-psr": "*"
     },
     "scripts": {
         "test": "phpunit"
