Run tests without extension

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -25,6 +25,7 @@
 
     <filter>
         <whitelist>
+            <directory processUncoveredFilesFromWhitelist="true">compat</directory>
             <directory processUncoveredFilesFromWhitelist="true">src</directory>
             <exclude>
                 <file>src/CompileException.php</file>
