--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
     "license": "LGPLv3",
     "require" : {
         "php" : ">=5.3.0",
-        "ext-handlebars": "0.6.*",
+        "ext-handlebars": "~0.7.0",
         "ext-spl" : "*",
         "psr/log": "~1.0.0"
     },
@@ -36,6 +36,7 @@
         "jbboehr/mustache-spec": "1.1.2",
         "lox/xhprof": "dev-master",
         "pear/console_table": "~1.2.1",
+        "phpunit/phpcov": "~2.0.2",
         "phpunit/phpunit": "~4.8",
         "satooshi/php-coveralls": "~1.0.0",
         "scrutinizer/ocular": "~1.1",
