--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
     "keywords" : [
         "handlebars"
     ],
-    "license": "LGPLv3",
+    "license": "LGPL-3.0-only",
     "require" : {
         "php" : ">=5.3.0",
         "ext-handlebars": "~0.7.0",
