--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,12 @@
 language: php
 
 php:
-# not supported on trusty
-#  - 5.3
-  - 5.4
-  - 5.5
   - 5.6
   - 7.0
   - 7.1
+  - 7.2
+  - 7.3
+  - master
 
 sudo: required
 
@@ -27,6 +26,7 @@ matrix:
   fast_finish: true
   allow_failures:
     - env: COVERAGE=true
+    - php: 'master'
   include:
     - php: 5.6
       env: COVERAGE=true
@@ -35,6 +35,7 @@ branches:
   only:
     - master
     - travis
+    - ci
 
 cache: false
 
